@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/02/26 03:58:51 xtraeme Exp $
+# $NetBSD: Makefile,v 1.2 2004/02/27 01:32:31 xtraeme Exp $
 
-DISTNAME=	mklivecd-0.2
+DISTNAME=	mklivecd-0.3
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
