@@ -1,4 +1,4 @@
-.\" $NetBSD: mklivecd.8,v 1.2 2004/02/27 01:32:31 xtraeme Exp $
+.\" $NetBSD: mklivecd.8,v 1.3 2004/02/27 01:48:43 wiz Exp $
 .\"
 .\" mklivecd - Build a NetBSD Live CD for i386 machines
 .\" Copyright (c) 2004 Juan RP <xtraeme@NetBSD.org>
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd February 27, 2004
+.Dd March 3, 2004
 .Dt MKLIVECD 8
 .Os
 .Sh NAME
@@ -37,6 +37,7 @@
 Live CD for i386 machines
 .Sh SYNOPSIS
 .Nm
+.Fl v
 .Fl c Ar conf_file
 .Ar target
 .Sh DESCRIPTION
@@ -55,6 +56,10 @@ Use
 as configuration file (full name expected).
 Example:
 .Fl c Ar foo.conf .
+.El
+.Bl -tag -width XvX
+.It Fl v
+Show more useful messages.
 .El
 .Sh CONFIGURATION
 .Nm
@@ -132,6 +137,14 @@ If set to
 then X11 sets and configuration files will be unpacked automatically.
 Defaults to
 .Sy no .
+.It CDRECORD_ARGS
+Arguments passed to 
+.Xr cdrecord 1 
+when burning the
+.Nx
+Live CD ISO image.
+Defaults to
+.Sy -v .
 .It BLANK_BEFORE_BURN
 Used in the
 .Ar burn
